chore: update .env.example with JWT configuration templates

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-# Database connection URL used by Prisma
-# Example for PostgreSQL:
-# DATABASE_URL="postgresql://user:password@localhost:5432/dii_test?schema=public"
-DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DB_NAME?schema=public"
+# Database Configuration
+# Connect to Supabase via connection pooling
+DATABASE_URL="postgresql://username:password@host:port/database?pgbouncer=true"
+
+# JWT Configuration
+JWT_SECRET_KEY="your_secret_key_here"
+JWT_ACCESS_EXPIRES_IN="15m"
+JWT_REFRESH_EXPIRES_IN="7d"
