--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "postinstall": "prisma generate",
-    "prisma:generate": "prisma generate"
+    "prisma:generate": "prisma generate",
+    "prisma:seed": "prisma db seed"
+  },
+  "prisma": {
+    "seed": "ts-node --transpile-only ./prisma/seed.js"
   },
   "keywords": [],
   "author": "",
