--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ DATABASE_URL="postgresql://username:password@host:port/database?pgbouncer=true"
 JWT_SECRET_KEY="your_secret_key_here"
 JWT_ACCESS_EXPIRES_IN="15m"
 JWT_REFRESH_EXPIRES_IN="7d"
+
+# FRONTEND URL
+CORS_ALLOWED_ORIGINS=http://localhost:3000,https://staging.yourapp.com,https://yourapp.com
